# wasm_game_of_life

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE_MIT  README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json  test.sh  update-submodules-to-remote-branches.sh  update-submodules.sh  wasm_game_of_life.js  wasm_game_of_life_bg.wasm  webpack.config.js
.github/: dependabot.yml
benches/: bench.rs
src/: lib.rs  utils.rs
tests/: web.rs
www/: .gitignore  index.html  index.js  package.json
